# gandalf-paper

./: .gitignore  CLAUDE.md  README.md  instructions.md  pyproject.toml
.claude/agents/: benchmark-analyst.md  code-documentor.md  latex-equations.md  literature-curator.md  physics-narrator.md
.github/: pull_request_template.md
.github/workflows/: claude.yml  notation-check.yml  paper-review.yml
data/benchmarks/alfven_wave/spatial_convergence/: N032.h5  N064.h5  N128.h5
data/benchmarks/alfven_wave/temporal_convergence/: dt_1p570796e00.h5  dt_1p963495em01.h5  dt_3p141593e00.h5  dt_3p926991em01.h5  dt_7p853982em01.h5
data/benchmarks/orszag_tang/spatial_convergence/: N032.h5  N064.h5  N128.h5
data/benchmarks/orszag_tang/temporal_convergence/: dt_1p250000em02.h5  dt_2p500000em02.h5  (+1 more)
meta-paper/: Makefile  appendix.tex  main.tex  references.bib
meta-paper/figures/: autonomy-gradient.tex  workflow.tex
meta-paper/resources/: finding-the-code.md  gandalf-development-summary.md  initial-brainstorming.md  narrowing-down.md  resurrecting-gandalf.md
paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex  notation.tex  references.bib
paper/sections/: conclusions.tex  discussion.tex  formulation.tex  implementation.tex  introduction.tex  numerics.tex  verification.tex
scripts/benchmarks/: analyze_alfven_dispersion.py  analyze_orszag_tang.py  analyze_turbulent_cascade.py  analyze_turbulent_cascade_final.py  generate_synthetic_cascade_data.py  run_alfven_dispersion.py  run_cascade_simple.py  run_orszag_tang.py  run_turbulent_cascade.py
(+4 files in other folders)
